home-assistant/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: home-assistant
  namespace: igloo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hass.home.odicro.com
    http:
      paths:
      - backend:
          serviceName: home-assistant
          servicePort: 80
